fixed invisible language switch on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27343,6 +27343,7 @@ a.pswp__share--download:hover {
   padding-right: 50px;
   cursor: pointer;
   margin-bottom: 0;
+  min-height: 40px;
 }
 
 #lang_switch {
@@ -27427,13 +27428,13 @@ footer {
   text-shadow: 1px 2px black;
 }
 
-main {
-  -webkit-margin-before: 50px;
+
+#lang_options {
+  z-index: 999;
 }
 
-
-@media only screen and (min-width: 769px) {
-  #lang_options {
-    z-index: 999;
+@media only screen and (min-width: 1200px) {
+  main {
+    -webkit-margin-before: 50px;
   }
 }
